--- a/relogio-digital/assets/css/style.css
+++ b/relogio-digital/assets/css/style.css
@@ -17,17 +17,18 @@ body{
 
 .relogio{
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
-  height: 200px;
-  width: 550px;
+  gap: 20px;
+  height: 250px;
+  width: 600px;
   background: transparent;
-  border-radius: 3px;
+  border-radius: 8px;
   box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .relogio div{
-  height: 150px;
+  height: 200px;
   width: 170px;
   display: flex;
   flex-direction: column;
