--- a/card/css/styles.css
+++ b/card/css/styles.css
@@ -56,7 +56,7 @@ body{
 .actions{
   background: none;
   border: none;
-  color: purple;
+  color: rgb(75, 100, 209);
   cursor: pointer;
   padding: 0px;
   
